# cookiecutter-pea-business-data-team-template

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/config/: config.example.yaml
{{ cookiecutter.repo_name }}/data_loader/: base.py
{{ cookiecutter.repo_name }}/src/: utils.py
